# etfengine

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: etf_universe.yaml  industry_chains.yaml  intelligence.yaml  overseas_earnings.yaml  portfolio.yaml  settings.yaml  strategies.yaml
docs/: dashboard-data-quality-optimization-todolist.md  dashboard-layout-review.md  dashboard-navigation-migration.md  dashboard-page-error-audit.md  dashboard-refactor-todolist.md  dashboard-uiux-optimization-plan.md  data-source-stability-plan.md  e2e-test-report.md  mcp-dashboard-uiux-review-2026-05-18.md  requirements-etf-investment-strategy.md  streamlit-a11y-notes.md  streamlit-architecture-review.md  使用说明.md
scripts/: audit_dashboard_pages.py  check_all.ps1  daily_update.py  generate_report.py  init_data.py  rebuild_env.ps1  start_dashboard.ps1  update_overseas_earnings.py
src/: __init__.py
src/analysis/: earnings_analyzer.py  fed_model.py  fundamental.py  regression.py  sentiment.py  valuation.py
src/api/: main.py  schemas.py
src/backtest/: engine.py  metrics.py  optimizer.py
src/core/: config.py  logging.py
src/dashboard/: app.py  backtest_jobs.py  components.py  data_refresh.py  data_status.py  formatting.py  nav.py  navigation.py  page_loader.py  report_builder.py  scheduler_status.py  services.py  styles.py  task_runner.py
src/data/: fetcher.py  models.py  storage.py
src/intelligence/: industry_chain_analyzer.py  llm_analyzer.py  (+3 more)
tests/: conftest.py  test_overseas_earnings.py
(+92 files in other folders)
