[project]
name = "etfengine"
version = "0.1.0"
description = "ETF 投资策略研究、回测与管理工具"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ETFEngine Team"}
]

dependencies = [
    "akshare>=1.14.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "duckdb>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.0",
    "scipy>=1.14.0",
    "apscheduler>=3.10.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "pyxirr>=0.10.0",
    "tenacity>=9.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "playwright>=1.48.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# 在部分 Windows 环境下，默认断言重写与 SciPy 等大型包同时加载时可能在收集阶段触发 MemoryError。
addopts = "--assert=plain"

[tool.mypy]
python_version = "3.12"
strict = true
